--- a/kurento-magic-mirror/src/main/resources/static/index.html
+++ b/kurento-magic-mirror/src/main/resources/static/index.html
@@ -23,7 +23,7 @@
 
 <script src="js/kurento-utils.js"></script>
 <script src="js/index.js"></script>
-<title>Kurento Tutorial 2: WebRTC Magic Mirror</title>
+<title>魔镜</title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse"
 						data-target=".navbar-collapse"></button>
-					<a class="navbar-brand" href=".">Kurento Tutorial</a>
+					<a class="navbar-brand" href=".">魔镜</a>
 				</div>
 				<div class="collapse navbar-collapse"
 					id="bs-example-navbar-collapse-1">
@@ -48,24 +48,16 @@
 	</header>
 	<div class="container">
 		<div class="page-header">
-			<h1>Tutorial 2: WebRTC Magic Mirror</h1>
+			<h1>魔镜</h1>
 			<p>
-				This application shows a <i>WebRtcEndpoint</i> connected to itself
-				(loopback) with a <i>FaceOverlay</i> filter in the middle (take a
-				look to the <a href="img/pipeline.png" data-toggle="lightbox"
-					data-title="Magic Mirror Media Pipeline"
-					data-footer="WebRtcEnpoint in loopback with a filter (FaceOverlay)">Media
-					Pipeline</a>). To run this demo follow these steps:
-			</p>
-			<ol>
-				<li>Open this page with a browser compliant with WebRTC
-					(Chrome, Firefox).</li>
-				<li>Click on <i>Start</i> button.
-				<li>Grant the access to the camera and microphone. After the
-					SDP negotiation the loopback should start.
-				<li>Click on <i>Stop</i> to finish the communication.
-				</li>
-			</ol>
+				--魔镜魔镜，请听我说，我和川普谁更靓？
+			    ==当然是你啦。 
+			    --那为什么，大家不关注我，求@@@ 
+			    ==因为你少了一顶帽子。
+			    --我现在就想要，给我一顶吧
+		        ==好吧，满足你的要求，按一下下面的绿色按钮，你就会得到那顶帽子（不是绿色的：）
+		     </p>
+
 		</div>
 		<div class="row">
 			<div class="col-md-5">
