--- a/kurento-magic-mirror/src/main/resources/static/index.html
+++ b/kurento-magic-mirror/src/main/resources/static/index.html
@@ -50,14 +50,16 @@
 		<div class="page-header">
 			<h1>魔镜</h1>
 			<p>
-				--魔镜魔镜，请听我说，我和川普谁更靓？
-			    ==当然是你啦。 
-			    --那为什么，大家不关注我，求@@@ 
-			    ==因为你少了一顶帽子。
-			    --我现在就想要，给我一顶吧
-		        ==好吧，满足你的要求，按一下下面的绿色按钮，你就会得到那顶帽子（不是绿色的：）
-		     </p>
-
+				我就是传说中的魔镜，互联网给我了强大的力量，既然有幸见到了我，我就满足你一个愿望。
+		    </p>
+		    <ol>
+			    <li>--魔镜魔镜，请听我说，我和川普谁更靓？</li>
+			    <li>==当然是你啦。 </li>
+			    <li>--那为什么大家都不关注我，求@@@ </li>
+			    <li>==因为你少了一顶帽子。</li>
+			    <li>--我现在就想要，给我一顶吧</li>
+		        <li>==好吧，满足你的要求，按一下下面的绿色按钮，你就会得到那顶帽子（不是绿色的：）</li>
+			</ol>
 		</div>
 		<div class="row">
 			<div class="col-md-5">
