--- a/kurento-magic-mirror/src/main/resources/static/index.html
+++ b/kurento-magic-mirror/src/main/resources/static/index.html
@@ -55,7 +55,7 @@
 		    <ol>
 			    <li>--魔镜魔镜，请听我说，我和川普谁更靓？</li>
 			    <li>==当然是你啦。 </li>
-			    <li>--那为什么大家都不关注我，求@@@ </li>
+			    <li>--那为什么大家都不关注我，求@ </li>
 			    <li>==因为你少了一顶帽子。</li>
 			    <li>--我现在就想要，给我一顶吧</li>
 		        <li>==好吧，满足你的要求，按一下下面的绿色按钮，你就会得到那顶帽子（不是绿色的：）</li>
