--- a/kurento-magic-mirror/src/main/resources/static/index.html
+++ b/kurento-magic-mirror/src/main/resources/static/index.html
@@ -63,27 +63,27 @@
 		</div>
 		<div class="row">
 			<div class="col-md-5">
-				<h3>Local stream</h3>
-				<video id="videoInput" autoplay width="480px" height="360px"
+				<h3>原貌</h3>
+				<video id="videoInput" autoplay width="240px" height="180px"
 					poster="img/webrtc.png"></video>
 			</div>
 			<div class="col-md-2">
 				<a id="start" href="#" class="btn btn-success"
 					onclick="start(); return false;"><span
-					class="glyphicon glyphicon-play"></span> Start</a><br /> <br /> <a
+					class="glyphicon glyphicon-play"></span> 启动魔法</a><br /> <br /> <a
 					id="stop" href="#" class="btn btn-danger"
 					onclick="stop(); return false;"><span
-					class="glyphicon glyphicon-stop"></span> Stop</a>
+					class="glyphicon glyphicon-stop"></span> 停止</a>
 			</div>
 			<div class="col-md-5">
-				<h3>Remote stream</h3>
-				<video id="videoOutput" autoplay width="480px" height="360px"
+				<h3>魔法效果</h3>
+				<video id="videoOutput" autoplay width="240px" height="180px"
 					poster="img/webrtc.png"></video>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-12">
-				<label class="control-label" for="console">Console</label><br>
+				<label class="control-label" for="console">施法</label><br>
 				<br>
 				<div id="console" class="democonsole">
 					<ul></ul>
